--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be83e4">  <td>18/01/26 10:46:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:TestCases.MacBookProPageTesting@1e397ed7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1709366259</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>18/01/26 10:46:35</td>   <td>20799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MacBookProPageTesting.pageAuthentication()[pri:0, instance:TestCases.MacBookProPageTesting@1e397ed7]">pageAuthentication</td> 
-  <td>main@1709366259</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/01/26 10:46:35</td>   <td>20805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown(org.testng.ITestResult)[pri:0, instance:TestCases.MacBookProPageTesting@1e397ed7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1709366259</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>18/01/26 10:46:35</td>   <td>20807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MacBookProPageTesting.someOtherFunctions()[pri:1, instance:TestCases.MacBookProPageTesting@1e397ed7]">someOtherFunctions</td> 
-  <td>main@1709366259</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/01/26 10:46:35</td>   <td>20810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown(org.testng.ITestResult)[pri:0, instance:TestCases.MacBookProPageTesting@1e397ed7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1709366259</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>18/01/26 10:46:35</td>   <td>20810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MacBookProPageTesting.takeMultiScreenshots()[pri:3, instance:TestCases.MacBookProPageTesting@1e397ed7]">takeMultiScreenshots</td> 
-  <td>main@1709366259</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/01/26 10:46:35</td>   <td>20815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown(org.testng.ITestResult)[pri:0, instance:TestCases.MacBookProPageTesting@1e397ed7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1709366259</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/01/26 10:46:35</td>   <td>20815</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:TestCases.MacBookProPageTesting@1e397ed7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1709366259</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>17/09/26 13:24:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demoTest.justTest()[pri:0, instance:TestCases.demoTest@6a4f787b]">justTest</td> 
+  <td>main@701141022</td>   <td></td> </tr>
 </table>
